Fix border color of tables in dark mode

--- a/_sass/_dark-mode.scss
+++ b/_sass/_dark-mode.scss
@@ -111,6 +111,10 @@
         hr {
             border-top-color: $dark-basic-color-three;
         }
+
+        table, th, td {
+            border-color: $dark-basic-color;
+        }
     }
 
     /*
